--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Challenge 1/5 on FreeCodeCamp - Random Quote Machine"
+      content="5 Projects for the FreeCodeCamp Front End Library Learning"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>FreeCodeCamp - Random Quote Machine</title>
+    <title>Freecodecamp Front End Library Projects</title>
   </head>
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
